// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventHeader component renders correctly 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      false,
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 43,
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "width": 220,
        },
        false,
      ]
    }
  >
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        @
        applicaster
      </Text>
    </View>
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        August 4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 9,
        "top": 9,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "height": 30,
            "width": 30,
          },
          Object {
            "tintColor": undefined,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`EventHeader component renders correctly for Facebook event 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 730,
        "zIndex": 2,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 43,
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "width": 220,
        },
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        August 4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 9,
        "top": 9,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "height": 30,
            "width": 30,
          },
          Object {
            "tintColor": undefined,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`EventHeader component renders correctly for Instagram event 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 730,
        "zIndex": 2,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 43,
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "width": 220,
        },
        false,
      ]
    }
  >
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        @
        applicaster
      </Text>
    </View>
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        August 4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 9,
        "top": 9,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "height": 30,
            "width": 30,
          },
          Object {
            "tintColor": undefined,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`EventHeader component renders correctly for Twitter event 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 730,
        "zIndex": 2,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 43,
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "width": 220,
        },
        false,
      ]
    }
  >
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        @
        applicaster
      </Text>
    </View>
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        August 4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 9,
        "top": 9,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "height": 30,
            "width": 30,
          },
          Object {
            "tintColor": undefined,
          },
        ]
      }
    />
  </View>
</View>
`;

exports[`EventHeader component renders correctly when overlayed 1`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "row",
        "paddingHorizontal": 12,
        "paddingTop": 12,
      },
      Object {
        "backgroundColor": "transparent",
        "left": 0,
        "position": "absolute",
        "top": 0,
        "width": 730,
        "zIndex": 2,
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "https://scontent.cdninstagram.com/t51.2885-19/11356956_452315591560419_1118499770_a.jpg",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
          "height": 43,
          "justifyContent": "space-between",
          "paddingLeft": 10,
          "width": 220,
        },
        false,
      ]
    }
  >
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 14,
              "fontWeight": "600",
              "marginBottom": -2,
              "marginTop": -3,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      />
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontSize": 10,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        @
        applicaster
      </Text>
    </View>
    <View
      style={undefined}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 12,
            },
            Object {
              "color": undefined,
            },
          ]
        }
      >
        August 4
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "position": "absolute",
        "right": 9,
        "top": 9,
      }
    }
  >
    <Image
      source={
        Object {
          "uri": undefined,
        }
      }
      style={
        Array [
          Object {
            "height": 30,
            "width": 30,
          },
          Object {
            "tintColor": undefined,
          },
        ]
      }
    />
  </View>
</View>
`;
